<resources>
    <string name="app_name">Vamos Rachar</string>
    <string name="imglogo">imglogo</string>
    <string name="imgreais">imgreais</string>
    <string name="_0">0</string>
    <string name="r_0_00">R$ 0.00</string>
    <string name="todo">TODO</string>
    <string name="btcomp">Compartilhar o valor por pessoas</string>
    <string name="btfalar">Falar o valor por pessoa</string>
    <string name="textFalaCompra">\"O valor da conta por pessoa foi de \"</string>
    <string name="TTSativo">TTS ativado…</string>
    <string name="TTSinativo">Sem TTS habilitado…</string>
    <string name="logodesc">Vamos rachar a conta</string>
    <string name="valor">Digite o valor total</string>
    <string name="totalopessoas">Digite a quantidade de pessoas</string>
    <string name="resultado">Valor por pessoa</string>
    <string name="imgRS">imagem cifrão</string>
    <string name="imgPessoas">imagem pessoas</string>
    <string name="moeda">reais</string>
</resources>