<?xml version="1.0" encoding="utf-8"?>


<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2C48E6"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/logodesc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent="0.25"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent="1"
        app:srcCompat="@drawable/logo"/>

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintEnd_toStartOf="@+id/pessoas"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent="0.15"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent="0.30"
        app:srcCompat="@drawable/reais"
        android:contentDescription="@string/imgRS"
        tools:ignore="ContentDescription" />

    <EditText
        android:id="@+id/valor"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:elegantTextHeight="true"
        android:ems="4"
        android:hint="@string/valor"
        android:importantForAutofill="no"
        android:includeFontPadding="false"
        android:inputType="number"
        android:textColor="#ECECEC"
        android:textColorHint="#ECECEC"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent="0.15"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/imageView2"
        app:layout_constraintTop_toTopOf="@+id/imageView2"
        app:layout_constraintVertical_bias="1.0"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent="0.60"
        tools:ignore="LabelFor" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintEnd_toStartOf="@+id/valor"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent="0.15"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent="0.30"
        app:srcCompat="@drawable/pessoas"
        android:contentDescription="@string/imgPessoas" />

    <EditText
        android:id="@+id/pessoas"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:elegantTextHeight="true"
        android:ems="4"
        android:hint="@string/totalopessoas"
        android:importantForAutofill="no"
        android:inputType="number"
        android:textColor="#ECECEC"
        android:textColorHint="#ECECEC"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent="0.15"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/imageView3"
        app:layout_constraintTop_toTopOf="@+id/imageView3"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent="0.60"
        tools:ignore="LabelFor" />

    <TextView
        android:id="@+id/resultado"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal|center_vertical"
        android:contentDescription="@string/resultado"
        android:elegantTextHeight="true"
        android:text="@string/r_0_00"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="80sp"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toTopOf="@+id/compartilhar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent="0.15"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent="0.7" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/falar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#323A66"
        android:clickable="true"
        android:contentDescription="@string/btfalar"
        android:elevation="8dp"
        android:focusable="true"
        android:scaleType="center"
        app:fabCustomSize="80dp"
        app:fabSize="auto"
        app:layout_constraintBottom_toBottomOf="@+id/compartilhar"
        app:layout_constraintEnd_toStartOf="@+id/compartilhar"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/compartilhar"
        app:layout_constraintVertical_bias="0.0"
        app:maxImageSize="56dp"
        app:srcCompat="@drawable/falar"
        app:tint="#FFFFFF"
        app:useCompatPadding="true" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/compartilhar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#323A66"
        android:clickable="true"
        android:contentDescription="@string/btcomp"
        android:elevation="8dp"
        android:focusable="true"
        android:scaleType="fitXY"
        app:fabCustomSize="80dp"
        app:fabSize="auto"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/falar"
        app:layout_constraintTop_toBottomOf="@+id/resultado"
        app:maxImageSize="56dp"
        app:srcCompat="@drawable/share"
        app:tint="#FFFFFF"
        app:useCompatPadding="true" />

</androidx.constraintlayout.widget.ConstraintLayout>